syntax="proto3";

package proto;
option go_package = "./;proto";

import "mom_common.proto";
import "attribute_expression.proto";

message ProductionRhythmInfo {
	//ID 
 	string id=3;
	//优先级 
 	int32 priority=4;
	//标准时长(秒) 
 	int32 standardTime=5;
	//是否启用 
 	bool enable=6;
	//默认匹配 
 	bool initialValue=7;
	//备注 
 	string remark=8;
	//生产产线ID 
    string productionLineID=9;
    //特性表达式 
 	repeated AttributeExpressionInfo attributeExpressions=2;
}

message QueryProductionRhythmRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
	//生产产线ID 
    // @inject_tag: uri:"productionLineID" form:"productionLineID"
    string productionLineID=11;
}

message QueryProductionRhythmResponse{
    Code code=1;
    string message=2;
    repeated ProductionRhythmInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllProductionRhythmResponse{
    Code code=1;
    string message=2;
    repeated ProductionRhythmInfo data=3;
}

message GetProductionRhythmDetailResponse{
    Code code=1;
    string message=2;
    ProductionRhythmInfo data=3;
}